Setup 2nd test using obsevent handler
git-svn-id: http://source.gemini.edu/software/giapi/giapi-osgi/trunk@35040 ee6ba543-07f8-4773-b02c-01d50e9d00ba